--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
   "dependencies": {
     "@prisma/client": "^6.9.0",
     "@types/express": "^5.0.3",
+    "aws-sdk": "^2.1692.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "crypt": "^0.0.2",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "multer": "^2.0.1",
     "resend": "^4.5.2",
     "typescript": "^5.8.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.19",
+    "@types/multer": "^1.4.13",
     "prisma": "^6.9.0"
   }
 }
