--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.828.0",
+    "@aws-sdk/lib-storage": "^3.828.0",
     "@prisma/client": "^6.9.0",
     "@types/express": "^5.0.3",
     "aws-sdk": "^2.1692.0",
@@ -17,6 +19,7 @@
     "crypt": "^0.0.2",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "mime-types": "^3.0.1",
     "multer": "^2.0.1",
     "resend": "^4.5.2",
     "typescript": "^5.8.3"
@@ -24,6 +27,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.19",
+    "@types/mime-types": "^3.0.1",
     "@types/multer": "^1.4.13",
     "prisma": "^6.9.0"
   }
