--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mime-types": "^3.0.1",
     "multer": "^2.0.1",
     "resend": "^4.5.2",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "zeptomail": "^6.2.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
